# mock_data_generator

./: README.md  pyproject.toml  run.sh
examples/: sensor_data_long.csv  sensor_data_wide.csv
mock_data_generator/: artist.py  main.py  reshaper.py  util.py
